--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sass": "^1.63.6"
   },
   "devDependencies": {
     "@types/node": "^20.2.6",
@@ -28,7 +29,6 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "cypress": "^12.16.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
