--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
     "redux": "^4.2.1",
