--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@apollo/client": "^3.7.15",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
+    "axios": "^1.4.0",
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
